09/07/15-21:31:31: Fixed the issue with invalid memcpy op.
09/07/15-21:40:39: Added waiting support in socket tests to avoid some retrieval errors.
09/20/15-22:56:27: Added binaries for Lua app.
09/22/15-00:44:47: Working on issue #38: added pure lua Log manager.
09/23/15-00:24:42: Added support for gui log sink. Added support for visual styles.
09/23/15-09:32:26: Working on issue #38: added initial support to reload the lua MT5 control app.
09/23/15-21:59:57: Working on issue #40: added support for image manager.
09/23/15-22:50:39: Working on issue #38: added support for ZMQ socket with an IUP timer.
09/24/15-20:39:42: Working on issue #41: Added ZMQ socket in portfolio manager.
09/24/15-21:03:33: Working on issue #41: ensuring that we process as many messages as possible on each timer callback call.
09/24/15-21:56:02: Added a button to clear the log area.
09/26/15-12:44:20: Working on issue #37: adding implementation for BinStream.
09/28/15-23:02:14: Working on issue #43: added initial support for vstruct. Now Need to ass unit tests.
10/01/15-12:18:06: Working on issue #39: Added support for telescope unit tests.
10/01/15-14:17:34: Working on issue #43: added Message Handler class to support reading/writing messages on lua side.
10/01/15-16:15:36: Working on issue #44: Sending message in proper format for balance_value change.
10/01/15-16:22:06: Working on issue #44: using serpent to log table content.
10/01/15-23:18:22: Working on issue #38: Added initial support for display of the balance evolution in lua control app.
10/03/15-08:49:21: Working on issue #38: only updating balance graph on timer event. Renamed balance_value event to balance_updated
10/03/15-09:36:46: Working on issue #38: Added initial support for portfolio started message. Using linger=0 by default on ZMQ sockets.
10/03/15-09:48:21: Working on issue #38: added support for configuration of the portfolio manager endpoint.